--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -1,14 +1,29 @@
 ; PlatformIO Project Configuration File
+; Forklift Ultrasonic Warning System - ESP32-C6 Configuration
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
+; Platform: espressif32
+; Board: ESP32-C6-DevKitC-1
+; Framework: Arduino
+; Target: SR04 sensor reading + UDP networking to Raspberry Pi
 ;
-; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32c6]
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+; Build options
+build_flags = 
+    -DCORE_DEBUG_LEVEL=2
+
+; Monitor settings
+monitor_speed = 115200
+monitor_filters = esp32_exception_decoder
+
+; Libraries for networking and sensor handling
+lib_deps = 
+    ; No additional libraries needed; using built-in Arduino libs for:
+    ; - WiFi.h / AsyncUDP for networking
+    ; - GPIO for digital I/O
+    ; - Timing functions for sensor reading
