`Update ESP32 platformio.ini and main.cpp for Olimex ESP32-PoE board`

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -23,7 +23,4 @@ monitor_filters = esp32_exception_decoder
 
 ; Libraries for networking and sensor handling
 lib_deps = 
-    ; No additional libraries needed; using built-in Arduino libs for:
-    ; - WiFi.h / AsyncUDP for networking
-    ; - GPIO for digital I/O
-    ; - Timing functions for sensor reading
+    me-no-dev/AsyncUDP @ ^0.0.1
