--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -23,4 +23,4 @@ monitor_filters = esp32_exception_decoder
 
 ; Libraries for networking and sensor handling
 lib_deps = 
-    me-no-dev/AsyncUDP @ ^0.0.1
+    AsyncUDP @ ^0.0.1
