--- a/raspberrypi/config.json
+++ b/raspberrypi/config.json
@@ -3,7 +3,7 @@
   "udp_listen_port": 5005,
   "distance_threshold_cm": 80,
   "pause_duration_seconds": 120,
-  "alert_wav_path": "/home/pi/forklift/alert.wav",
+  "alert_wav_path": "/home/mark/Mezzanine/raspberrypi/alert.wav",
   "pause_button_gpio": 17,
   "min_interval_between_alerts_sec": 1.0,
   "_comments": {
