`Update ESP32-PoE configuration and code for Forklift Ultrasonic Warning System`

--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -1,14 +1,14 @@
 ; PlatformIO Project Configuration File
-; Forklift Ultrasonic Warning System - ESP32-C6 Configuration
+; Forklift Ultrasonic Warning System - Olimex ESP32-PoE Configuration
 ;
 ; Platform: espressif32
-; Board: ESP32-C6-DevKitC-1
+; Board: Olimex ESP32-PoE
 ; Framework: Arduino
 ; Target: SR04 sensor reading + UDP networking to Raspberry Pi
 ;
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32c6]
+[env:esp32-poe]
 platform = espressif32
 board = esp32-poe
 framework = arduino
@@ -21,6 +21,6 @@ build_flags =
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder
 
-; Libraries for networking and sensor handling
-lib_deps = 
+; No external libraries needed - using built-in WiFiUDP and ETH
+; lib_deps = 
     AsyncUDP @ ^0.0.1
