--- a/esp32/.vscode/launch.json
+++ b/esp32/.vscode/launch.json
@@ -12,8 +12,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32c6/firmware.elf",
-            "projectEnvName": "esp32c6",
+            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32-poe/firmware.elf",
+            "projectEnvName": "esp32-poe",
             "toolchainBinDir": "C:/Users/USER/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
@@ -25,8 +25,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32c6/firmware.elf",
-            "projectEnvName": "esp32c6",
+            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32-poe/firmware.elf",
+            "projectEnvName": "esp32-poe",
             "toolchainBinDir": "C:/Users/USER/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart"
         },
@@ -34,8 +34,8 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (without uploading)",
-            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32c6/firmware.elf",
-            "projectEnvName": "esp32c6",
+            "executable": "c:/Users/USER/Documents/raspberrypi/Mezzanine/esp32/.pio/build/esp32-poe/firmware.elf",
+            "projectEnvName": "esp32-poe",
             "toolchainBinDir": "C:/Users/USER/.platformio/packages/toolchain-xtensa-esp32@8.4.0+2021r2-patch5/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "loadMode": "manual"
