--- a/raspberrypi/config.json
+++ b/raspberrypi/config.json
@@ -6,7 +6,7 @@
   "alert_wav_path": "/home/mark/Mezzanine/raspberrypi/alert.wav",
   "pause_button_gpio": 17,
   "min_interval_between_alerts_sec": 1.0,
-  "audio_output": "headphone_jack",
+  "audio_output": "hdmi",
   "_comments": {
     "udp_listen_port": "UDP port on which Pi listens for ESP32 distance packets (default 5005)",
     "distance_threshold_cm": "Fork height threshold in cm. Alert triggers when distance < threshold",
@@ -14,6 +14,6 @@
     "alert_wav_path": "Full path to horn warning WAV audio file",
     "pause_button_gpio": "BCM GPIO pin number for pause button (wired to GPIO17 in schematics)",
     "min_interval_between_alerts_sec": "Minimum seconds between consecutive alerts (prevents alert spam)",
-    "audio_output": "Audio output method: 'usb' for USB audio adapter, 'gpio_pwm' for Pi 5 GPIO 12/13 PWM audio (requires dtoverlay=pwm-2chan in /boot/firmware/config.txt), 'headphone_jack' for onboard 3.5mm headphone jack/speaker"
+    "audio_output": "Audio output method: 'usb' for USB audio adapter, 'gpio_pwm' for Pi 5 GPIO 12/13 PWM audio (requires dtoverlay=pwm-2chan), 'headphone_jack' for onboard 3.5mm jack, 'hdmi' for HDMI audio (may need to uninstall pulseaudio and add hdmi_drive=2 to /boot/firmware/config.txt)"
   }
 }
