--- a/raspberrypi/config.json
+++ b/raspberrypi/config.json
@@ -3,10 +3,10 @@
   "udp_listen_port": 5005,
   "distance_threshold_cm": 80,
   "pause_duration_seconds": 120,
-  "alert_wav_path": "/home/mark/Mezzanine/raspberrypi/alert.wav",
+  "alert_wav_path": "/home/mark/Mezzanine/raspberrypi/alert_stereo.wav",
   "pause_button_gpio": 17,
   "min_interval_between_alerts_sec": 1.0,
-  "audio_output": "hdmi",
+  "audio_output": "usb",
   "_comments": {
     "udp_listen_port": "UDP port on which Pi listens for ESP32 distance packets (default 5005)",
     "distance_threshold_cm": "Fork height threshold in cm. Alert triggers when distance < threshold",
